[package]
name = "osc-bnuuy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
cgmath = "0.18.0" 
openvr = "0.6.0"
phorcys-osc = { git = "https://github.com/kb10uy/phorcys.git", version = "0.1.0" }
